# PythonFun

./: .gitignore  DataFrames.ipynb  Datalab-Features.ipynb  Neo4j.ipynb  NetworkX.ipynb  Numpy.ipynb  PySpark-ML.ipynb  PySpark.ipynb  README.md  SQL.ipynb  Scikit-Learn.ipynb  Systems.ipynb  TF-Quickstart.ipynb  TTM-tutorial-4-Multiclass-Classification.ipynb  charts.ipynb  cython.ipynb  imdb_lstm.ipynb  jupyter-tricks.ipynb  keras2.py  keras_quickstart.ipynb  maths.ipynb  python-basics.ipynb  sklearn-general.ipynb  widgets.ipynb
.jupyter/desktop-workspaces/: default-37a8.jupyterlab-workspace
TTM-Tutorial/: TTM-Tutorial-1-Basics.ipynb  TTM-Tutorial-2-CrossValidation.ipynb  TTM-Tutorial-3-TimeSeries.ipynb
fluent_python/: .gitignore  1_data_structures.ipynb
hypermodern/hypermodern-python/: README.md  noxfile.py  pyproject.toml
hypermodern/hypermodern-python/src/hypermodern_python/: console.py
hypermodern/hypermodern-python/tests/: test_console.py
leetcode/: LinkedListNew.py
stdlib/: stdlib_devtools.ipynb
stdlib/.jupyter/: desktop-settings.json
stdlib/.jupyter/desktop-workspaces/: default-37a8.jupyterlab-workspace
tf_old/: keras1-A.py  keras1-B.py  keras3-A.py  keras8-A.py  tf-tester.ipynb  tftransform_simple.ipynb
visualization/: pandas.ipynb
